--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 </head>
 
 <body>
@@ -15,6 +20,130 @@
   consequat. Duis
   aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
   sint -->
+      <header class="header">
+        <div class="inner nav_content is_flex">
+          <div class="logo">
+            <a href="#"><i class="fas fa-solid fa-archway fa-2x"></i></a>
+          </div>
+          <div class="menu">
+            <nav>
+              <ul class="contact">
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
+      <main>
+          <!-- メインタイトル、サブタイトル、背景画像がある部分 -->
+        <section class="keyvisual background_image">
+          <div class="inner title">
+            <h1 class="main_title">
+              <p>WEB PRODUCTION COMPANY</p>
+            </h1>
+            <h2 class="sub_title">
+              <p>DIRECTION,CONTENT MARKETING</p>
+            </h2>
+          </div>
+        </section>
+          <!-- 「WORK」のタイトルがある部分 -->
+        <section class="work">
+          <div class="inner is_flex">
+            <div class="img_pc">
+              <img src="./img/pc/pc.png">
+            </div>
+            <div class="work_inner">
+              <h3>WORK</h3>
+              <div class="work_text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                sint
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- 「WE ARE SKILLS」のタイトルがある部分-->
+        <section class="skills">
+          <div class="inner skills_inner">
+            <h3>WE ARE SKILLS</h3>
+            <div class="skills_content is_flex">
+              <img class="sk_img" src="./img/skills/skills_1.png">
+              <img class="sk_img" src="./img/skills/skills_2.png">
+              <img class="sk_img" src="./img/skills/skills_3.png">
+              <img class="sk_img" src="./img/skills/skills_4.png">
+              <img class="sk_img" src="./img/skills/skills_5.png">
+              <img class="sk_img" src="./img/skills/skills_6.png">
+            </div>
+          </div>
+        </section>
+          <!-- 「SELECT PLAN」のタイトルがある部分 -->
+        <section class="plan">
+          <div class="inner">
+            <h3>SELECT PLAN</h3>
+            <div class="table">
+              <table class="cell--table">
+                <thead>
+                  <tr>
+                    <th scope="col">PLAN</th>
+                    <th scope="col">BASIC PLAN</th>
+                    <th scope="col">STANDARD PLAN</th>
+                    <th scope="col">ENTERPRICE PLAN</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th>PRICE</th>
+                    <td>\100,000</td>
+                    <td>\200,000</td>
+                    <td>\300,000</td>
+                  </tr>
+                  <tr>
+                    <th>DELIVERY</th>
+                    <td>Manuscript</td>
+                    <td>HTML</td>
+                    <td>Manuscript,HTML,PSD</td>
+                  </tr>
+                  <tr>
+                    <th>ANALYSIS</th>
+                    <td>○</td>
+                    <td>○</td>
+                    <td>○</td>
+                  </tr>
+                  <tr>
+                    <th>IMPROVEMENT</th>
+                    <td>×</td>
+                    <td>○</td>
+                    <td>○</td>
+                  </tr>
+                  <tr>
+                    <th>DESIGN</th>
+                    <td>×</td>
+                    <td>×</td>
+                    <td>○</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </section>
+        <section class="sns">
+          <div class="inner">
+            <nav>
+              <ul class="sns_inner is_flex_a">
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+              </ul>
+            </nav>
+          </div>
+          <!-- iconが並んでいる部分 -->
+        </section>
+      </main>
+      <footer class="footer">
+        <p class="inner">Copyright(c)</p>
+      </footer>
 </body>
 
 </html>
