--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
           <div class="inner skills_inner">
             <h3>WE ARE SKILLS</h3>
             <div class="skills_content is_flex">
-              <img class="sk_img" src="./img/skills/skills_1.png">
-              <img class="sk_img" src="./img/skills/skills_2.png">
-              <img class="sk_img" src="./img/skills/skills_3.png">
-              <img class="sk_img" src="./img/skills/skills_4.png">
-              <img class="sk_img" src="./img/skills/skills_5.png">
-              <img class="sk_img" src="./img/skills/skills_6.png">
+                  <a href="#"><img class="sk_img" src="./img/skills/skills_1.png"></a>
+                  <a href="#"><img class="sk_img" src="./img/skills/skills_2.png"></a>
+                  <a href="#"><img class="sk_img" src="./img/skills/skills_3.png"></a>
+                  <a href="#"><img class="sk_img" src="./img/skills/skills_4.png"></a>
+                  <a href="#"><img class="sk_img" src="./img/skills/skills_5.png"></a>
+                  <a href="#"><img class="sk_img" src="./img/skills/skills_6.png"></a>
             </div>
           </div>
         </section>
