--- a/index.html
+++ b/index.html
@@ -25,18 +25,16 @@
           <div class="logo">
             <a href="#"><i class="fas fa-solid fa-archway fa-2x"></i></a>
           </div>
-          <div class="menu">
             <nav>
               <ul class="contact">
                 <li><a href="#">Contact</a></li>
               </ul>
             </nav>
-          </div>
         </div>
       </header>
       <main>
           <!-- メインタイトル、サブタイトル、背景画像がある部分 -->
-        <section class="keyvisual background_image">
+        <section class="keyvisual">
           <div class="inner title">
             <h1 class="main_title">
               <p>WEB PRODUCTION COMPANY</p>
@@ -67,14 +65,16 @@
         <section class="skills">
           <div class="inner skills_inner">
             <h3>WE ARE SKILLS</h3>
-            <div class="skills_content is_flex">
-                  <a href="#"><img class="sk_img" src="./img/skills/skills_1.png"></a>
-                  <a href="#"><img class="sk_img" src="./img/skills/skills_2.png"></a>
-                  <a href="#"><img class="sk_img" src="./img/skills/skills_3.png"></a>
-                  <a href="#"><img class="sk_img" src="./img/skills/skills_4.png"></a>
-                  <a href="#"><img class="sk_img" src="./img/skills/skills_5.png"></a>
-                  <a href="#"><img class="sk_img" src="./img/skills/skills_6.png"></a>
-            </div>
+            <nav>
+              <ul class="skills_content is_flex">
+                <li><a href="#"><img class="sk_img" src="./img/skills/skills_1.png"></a></li>
+                <li><a href="#"><img class="sk_img" src="./img/skills/skills_2.png"></a></li>
+                <li><a href="#"><img class="sk_img" src="./img/skills/skills_3.png"></a></li>
+                <li><a href="#"><img class="sk_img" src="./img/skills/skills_4.png"></a></li>
+                <li><a href="#"><img class="sk_img" src="./img/skills/skills_5.png"></a></li>
+                <li><a href="#"><img class="sk_img" src="./img/skills/skills_6.png"></a></li>
+              </ul>
+            </nav>
           </div>
         </section>
           <!-- 「SELECT PLAN」のタイトルがある部分 -->
