--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="inner skills_inner">
             <h3>WE ARE SKILLS</h3>
             <nav>
-              <ul class="skills_content is_flex">
+              <ul class="skills_content is_flex_a">
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_1.png"></a></li>
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_2.png"></a></li>
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_3.png"></a></li>
