--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="inner skills_inner">
             <h3>WE ARE SKILLS</h3>
             <nav>
-              <ul class="skills_content is_flex_a">
+              <ul class="skills_content d-start">
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_1.png"></a></li>
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_2.png"></a></li>
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_3.png"></a></li>
@@ -138,7 +138,7 @@
         <section class="sns">
           <div class="inner">
             <nav>
-              <ul class="sns_inner is_flex_b">
+              <ul class="sns_inner d-center">
                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
