--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
   sint -->
       <header class="header">
-        <div class="inner is_flex d-between">
+        <div class="inner is_flex flex-content-between">
           <div class="logo">
             <a href="#"><i class="fas fa-solid fa-archway fa-2x"></i></a>
           </div>
@@ -74,7 +74,7 @@
           <div class="inner skills_inner">
             <h3>WE ARE SKILLS</h3>
             <nav>
-              <ul class="skills_content is_flex d-start">
+              <ul class="skills_content is_flex flex-content-start">
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_1.png"></a></li>
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_2.png"></a></li>
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_3.png"></a></li>
@@ -138,7 +138,7 @@
         <section class="sns">
           <div class="inner">
             <nav>
-              <ul class="sns_inner is_flex d-center">
+              <ul class="sns_inner is_flex flex-content-center">
                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
