--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
   sint -->
       <header class="header">
-        <div class="inner is_flex flex-content-between">
+        <div class="inner is_flex content_between">
           <div class="logo">
             <a href="#"><i class="fas fa-solid fa-archway fa-2x"></i></a>
           </div>
@@ -45,10 +45,10 @@
         <section class="keyvisual">
           <div class="inner title">
             <h1 class="main_title">
-              <p>WEB PRODUCTION COMPANY</p>
+              WEB PRODUCTION COMPANY
             </h1>
             <h2 class="sub_title">
-              <p>DIRECTION,CONTENT MARKETING</p>
+              DIRECTION,CONTENT MARKETING
             </h2>
           </div>
         </section>
@@ -56,7 +56,7 @@
         <section class="work">
           <div class="inner is_flex">
             <div class="img_pc">
-              <img src="./img/pc/pc.png">
+              <img class="work_img" src="./img/pc/pc.png">
             </div>
             <div class="work_inner">
               <h3>WORK</h3>
@@ -74,7 +74,7 @@
           <div class="inner skills_inner">
             <h3>WE ARE SKILLS</h3>
             <nav>
-              <ul class="skills_content is_flex flex-content-start">
+              <ul class="skills_content is_flex content_start">
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_1.png"></a></li>
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_2.png"></a></li>
                 <li><a href="#"><img class="sk_img" src="./img/skills/skills_3.png"></a></li>
@@ -90,7 +90,7 @@
           <div class="inner">
             <h3>SELECT PLAN</h3>
             <div class="table">
-              <table class="cell--table">
+              <table class="cell_table">
                 <thead>
                   <tr>
                     <th scope="col">PLAN</th>
@@ -138,7 +138,7 @@
         <section class="sns">
           <div class="inner">
             <nav>
-              <ul class="sns_inner is_flex flex-content-center">
+              <ul class="sns_inner is_flex content_center">
                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
